# surfwind

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
docs/: architecture.md
skills/surfwind/: SKILL.md
skills/surfwind-maintainer/: SKILL.md
skills/surfwind-runtime/: SKILL.md
src/: agent.rs  cli.rs  config.rs  lib.rs  main.rs  models.rs  output_contract.rs  runstore.rs  runtime.rs  settings.rs  translator.rs  types.rs
src/agent/: events.rs  execute.rs  mod.rs  poll.rs  utils.rs
src/runtime/: discovery.rs  headless.rs  rpc.rs
tests/: integration_tests.rs
tests/common/: mod.rs
