[package]
name = "surfwind"
version = "0.1.0"
edition = "2021"
description = "Headless-first Rust CLI for the local Windsurf runtime"
authors = ["yu"]
license = "MIT"

[lib]
name = "surfwind"
path = "src/lib.rs"

[[bin]]
name = "surfwind"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
jsonschema = "0.18"
once_cell = "1.20"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
walkdir = "2.5"
which = "6.0"

[dev-dependencies]
tempfile = "3.10"
